<resources>
    <string name="app_name">InsuControl</string>
    <string name="pass">Contraseña</string>
    <string name="user">Nombre y apellido</string>
    <string name="userNombre">Nombre</string>
    <string name="userApellido">Apellido</string>
    <string name="correo">Correo</string>
    <string name="fecha">Fecha de nacimiento</string>
    <string name="m">Masculino</string>
    <string name="f">Femenino</string>
    <string name="info">Información Médica</string>
    <string name="peso">Peso</string>
    <string name="talla">Talla</string>
    <string name="glucosa">Glucosa Objetivo</string>
    <string name="min">Min</string>
    <string name="max">Máx</string>
    <string name="ratio">Ratio CH</string>
    <string name="sens">Sensibilidad Insulina</string>
    <string name="glucosaActual">Glucosa actual (GS)</string>

    <string name="tituloCategorias">Lista de categorías</string>
    <string name="tituloListaAlimentos">Lista de alimentos</string>

    <string name="categoria">Categoria</string>

    <!--Button-->
    <string name="comenzar">Comenzar</string>
    <string name="registro">Regístrate</string>
    <string name="siguiente">Siguiente</string>
    <string name="guardar">Guardar</string>


    <string name="account_type">com.example.espol.insucontrol.account</string>
    <string name="provider_authority">com.example.espol.insucontrol</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="infoAlimentos">Información de alimentos</string>
    <string name="porcionTt">Porción a ingerir</string>

</resources>
