<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.espol.insucontrol.InfoMedicaActivity">


    <RelativeLayout
        android:layout_width="368dp"
        android:layout_height="495dp"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp" >

        <TextView
            android:id="@+id/info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/info"
            android:textSize="18sp"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/Peso"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/info"
            android:layout_marginTop="@dimen/activity_top_margin"
            android:text="@string/peso" />


        <EditText
            android:id="@+id/txtPeso"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:hint="Kg"
            android:inputType="number"
            android:textAlignment="center"
            android:layout_alignBottom="@+id/Peso"
            android:layout_alignRight="@+id/txtMax"
            android:layout_alignEnd="@+id/txtMax" />


        <TextView
            android:id="@+id/Talla"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/Peso"
            android:layout_marginTop="@dimen/activity_top_margin"
            android:text="@string/talla" />


        <EditText
            android:id="@+id/txtTalla"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/Talla"
            android:layout_alignBottom="@+id/Talla"
            android:layout_alignLeft="@+id/txtPeso"
            android:layout_alignStart="@+id/txtPeso"
            android:hint="Cm"
            android:inputType="number"
            android:textAlignment="center" />


        <TextView
            android:id="@+id/Glucosa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/Talla"
            android:layout_marginTop="@dimen/activity_top_margin"
            android:text="@string/glucosa" />


        <EditText
            android:id="@+id/txtMin"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/Glucosa"
            android:layout_alignBottom="@+id/Glucosa"
            android:layout_centerHorizontal="true"
            android:hint="@string/min"
            android:inputType="number" />


        <EditText
            android:id="@+id/txtMax"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/txtMin"
            android:layout_alignBottom="@+id/txtMin"
            android:layout_marginLeft="25dp"
            android:layout_marginStart="25dp"
            android:layout_toEndOf="@+id/txtMin"
            android:layout_toRightOf="@+id/txtMin"
            android:hint="@string/max"
            android:inputType="number" />


        <TextView
            android:id="@+id/Ratio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/Glucosa"
            android:layout_marginTop="@dimen/activity_top_margin"
            android:text="@string/ratio" />


        <EditText
            android:id="@+id/txtRatio"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/txtMax"
            android:layout_alignLeft="@+id/txtMin"
            android:layout_alignRight="@+id/txtMax"
            android:layout_alignStart="@+id/txtMin"
            android:layout_below="@+id/txtMin"
            android:inputType="number"
            android:text="15"
            android:textAlignment="center" />


        <TextView
            android:id="@+id/Sens"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/Ratio"
            android:layout_marginTop="@dimen/activity_top_margin"
            android:text="@string/sens" />


        <EditText
            android:id="@+id/txtSens"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/txtRatio"
            android:layout_alignLeft="@+id/txtRatio"
            android:layout_alignRight="@+id/txtRatio"
            android:layout_alignStart="@+id/txtRatio"
            android:layout_below="@+id/txtRatio"
            android:inputType="number"
            android:text="50"
            android:textAlignment="center" />


        <Button
            android:id="@+id/btnSave"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/txtSens"
            android:layout_marginTop="49dp"
            android:background="@color/colorAccent"
            android:nestedScrollingEnabled="true"
            android:text="@string/guardar"
            android:textAllCaps="false"
            android:textColor="@color/colorBlack"
            android:textSize="18sp" />

    </RelativeLayout>

</android.support.constraint.ConstraintLayout>
