<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.espol.insucontrol.RegistroActivity">

    <RelativeLayout
        android:layout_width="308dp"
        android:layout_height="551dp"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_editor_absoluteY="0dp">

        <TextView
            android:id="@+id/info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/btnLogin"
            android:layout_alignLeft="@+id/btnLogin"
            android:layout_alignRight="@+id/btnLogin"
            android:layout_alignStart="@+id/btnLogin"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="20dp"
            android:textColor="@color/colorPrimaryDark"
            android:text="Información del Representante"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TableRow
            android:id="@+id/lineaUsuario"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/info">

            <ImageView
                android:id="@+id/correoPwd"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginBottom="40dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="15dp"
                android:src="@mipmap/ic_user" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_txtUser"
                android:layout_width="match_parent"
                android:layout_height="50dp">

                <EditText
                    android:id="@+id/txtUser"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_alignTop="@+id/info"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="20dp"
                    android:hint="@string/user"
                    android:maxLines="1" />
            </android.support.design.widget.TextInputLayout>
        </TableRow>

        <TableRow
            android:id="@+id/lineaCorreo"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/lineaUsuario">

            <ImageView
                android:id="@+id/correoIco"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="15dp"
                android:src="@mipmap/ic_mail" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_txtCorreo"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_centerHorizontal="true">

                <EditText
                    android:id="@+id/txtCorreo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:hint="@string/correo"
                    android:inputType="textEmailAddress"
                    android:maxLines="1" />
            </android.support.design.widget.TextInputLayout>
        </TableRow>

        <TableRow
            android:id="@+id/lineaPwd"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/lineaCorreo">

            <ImageView
                android:id="@+id/icoPwd"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="15dp"
                android:src="@mipmap/ic_pwd" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_txtPass"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_centerHorizontal="true">

                <EditText
                    android:id="@+id/txtPass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_marginTop="10dp"
                    android:hint="@string/pass"
                    android:inputType="textPassword"
                    android:maxLines="1" />
            </android.support.design.widget.TextInputLayout>
        </TableRow>


        <TextView
            android:id="@+id/infoPaciente"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lineaPwd"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="30dp"
            android:text="Información del Paciente"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TableRow
            android:id="@+id/lineaPaciente"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/infoPaciente">

            <ImageView
                android:id="@+id/paciente"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginBottom="40dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="15dp"
                android:src="@mipmap/ic_user" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_txtUserPaciente"
                android:layout_width="match_parent"
                android:layout_height="50dp">

                <EditText
                    android:id="@+id/txtUserPaciente"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_alignTop="@+id/info"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="20dp"
                    android:hint="@string/user"
                    android:maxLines="1" />
            </android.support.design.widget.TextInputLayout>
        </TableRow>

        <TableRow
            android:id="@+id/lineaFecha"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/lineaPaciente">

            <ImageView
                android:id="@+id/icoFecha"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="15dp"
                android:src="@mipmap/ic_fecha" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_txtFecha"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_centerHorizontal="true">

                <EditText
                    android:id="@+id/txtFecha"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/txtPass"
                    android:hint="@string/fecha"
                    android:inputType="date"
                    android:maxLines="1" />
            </android.support.design.widget.TextInputLayout>
        </TableRow>

        <RadioGroup
            android:id="@+id/rdgenero"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/lineaFecha"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/icoGenero"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginBottom="10dp"
                android:layout_marginRight="15dp"
                android:src="@mipmap/ic_user" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:hint="@string/m" />

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/f" />

        </RadioGroup>

        <LinearLayout
            android:id="@+id/layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/rdgenero"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/icoLugar"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="15dp"
                android:src="@mipmap/ic_lugar" />

            <Spinner
                android:id="@+id/spnProvincia"
                android:layout_width="wrap_content"
                android:layout_height="50dp"></Spinner>


            <Spinner
                android:id="@+id/spnCiudad"
                android:layout_width="wrap_content"
                android:layout_height="50dp">

            </Spinner>
        </LinearLayout>

        <Button
            android:id="@+id/btnSig"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/layout"
            android:layout_marginTop="23dp"
            android:background="@color/colorAccent"
            android:nestedScrollingEnabled="true"
            android:text="@string/siguiente"
            android:textAllCaps="false"
            android:textColor="@color/colorBlack"
            android:textSize="18sp" />


    </RelativeLayout>


</android.support.constraint.ConstraintLayout>
